# MixiD

./: .gitignore  CMakeLists.txt  README.md  device_properties.h  driver.h  flake.nix  headerConv.py  imgui-custom.cpp  imgui-custom.h  imgui-knobs.cpp  main.cpp
CMake/: FindLibUSB.cmake  bin2h.cmake
